--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Niftique</title>
+    <link rel="icon" type="image/svg+xml" href="/src/assets/images/Logo.avif" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Emerging software developer with expertise in JavaScript, React, Node.js, and web development. Enthusiastic about merging coding and art. Let's collaborate to bring concepts to fruition!">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="black" />
+    <meta property="og:title" content="NIFTIQUE - Empowering Futures: NFT Marketplace & Crypto Converter">
+    <meta property="og:description" content="Experience Art-Tech Fusion: Explore our innovative NFT marketplace and real-time crypto converter for a seamless journey into digital assets.">
+    <meta property="og:image" content="./public/Niftique_Webpage.avif">
+    <meta name="og:image:height" content="816">
+    <meta name="og:image:width" content="1456">
   </head>
   <body>
     <div id="root"></div>
