--- a/index.html
+++ b/index.html
@@ -2,31 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/Niftique_Logo.avif" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      charset="UTF-8"
-      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
-    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/public/Niftique_Logo.avif" />
+    <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
     <title>Niftique</title>
-    <link rel="icon" type="image/svg+xml" href="/src/assets/images/Logo.avif" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Emerging software developer with expertise in JavaScript, React, Node.js, and web development. Enthusiastic about merging coding and art. Let's collaborate to bring concepts to fruition!">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="black" />
+    <meta name="description" content="Experience Art-Tech Fusion: Explore our innovative NFT marketplace and real-time crypto converter for a seamless journey into digital assets.">
+    <meta name="theme-color" content="#000000" />
     <meta property="og:title" content="NIFTIQUE - Empowering Futures: NFT Marketplace & Crypto Converter">
     <meta property="og:description" content="Experience Art-Tech Fusion: Explore our innovative NFT marketplace and real-time crypto converter for a seamless journey into digital assets.">
-    <meta property="og:image" content="./public/Niftique_Webpage.avif">
+    <meta property="og:image" content="https://github.com/JamesUdy/Niftique/blob/main/public/Niftique_Webpage.avif">
     <meta name="og:image:height" content="816">
     <meta name="og:image:width" content="1456">
-  </head>
+</head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
