Refactor: Changed metasection in index.html

--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
     <link rel="icon" type="image/svg+xml" href="/public/Niftique_Logo.avif" />
     <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
-    <title>Niftique</title>
+    <title>NIFTIQUE - Empowering Futures: NFT Marketplace & Crypto Converter</title>
     <meta name="description" content="Experience Art-Tech Fusion: Explore our innovative NFT marketplace and real-time crypto converter for a seamless journey into digital assets.">
-    <meta name="theme-color" content="#000000" />
+    <meta property="og:url" content="https://niftique.vercel.app/home">
+    <meta property="og:type" content="website">
     <meta property="og:title" content="NIFTIQUE - Empowering Futures: NFT Marketplace & Crypto Converter">
     <meta property="og:description" content="Experience Art-Tech Fusion: Explore our innovative NFT marketplace and real-time crypto converter for a seamless journey into digital assets.">
     <meta property="og:image" content="https://github.com/JamesUdy/Niftique/blob/main/public/Niftique_Webpage.avif">
-    <meta name="og:image:height" content="816">
-    <meta name="og:image:width" content="1456">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="niftique.vercel.app">
+    <meta property="twitter:url" content="https://niftique.vercel.app/home">
+    <meta name="twitter:title" content="NIFTIQUE - Empowering Futures: NFT Marketplace & Crypto Converter">
+    <meta name="twitter:description" content="Experience Art-Tech Fusion: Explore our innovative NFT marketplace and real-time crypto converter for a seamless journey into digital assets.">
+    <meta name="twitter:image" content="https://github.com/JamesUdy/Niftique/blob/main/public/Niftique_Webpage.avif">        
 </head>
 
   <body>
