--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
     <meta property="og:title" content="NIFTIQUE - Empowering Futures: NFT Marketplace & Crypto Converter">
     <meta property="og:description" content="Experience Art-Tech Fusion: Explore our innovative NFT marketplace and real-time crypto converter for a seamless journey into digital assets.">
     <meta property="og:image" content="https://i.imgur.com/qBRBcfz.png">
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />  
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="niftique.vercel.app">
     <meta property="twitter:url" content="https://niftique.vercel.app/home">
     <meta name="twitter:title" content="NIFTIQUE - Empowering Futures: NFT Marketplace & Crypto Converter">
     <meta name="twitter:description" content="Experience Art-Tech Fusion: Explore our innovative NFT marketplace and real-time crypto converter for a seamless journey into digital assets.">      
-    <meta name="twitter:image" content="https://i.imgur.com/qBRBcfz.png">        
+    <meta name="twitter:image" content="https://i.imgur.com/qBRBcfz.png"> 
+    <meta property="twitter:image:width" content="1200" />
+    <meta property="twitter:image:height" content="630" />      
 </head>
 
   <body>
